# HERMES

./: .gitignore  CLAUDE.md  README.md  README_NEW.md  config.example.yaml  create_dimensional_graph_v2.py  graph_queries.py  hermes-cli  minimal_graph_test.py  pyproject.toml  qwen_conveyance_config.py  reorganize_hermes.py  test_embedder.py
docs/: hermes_build_requirements.md
docs/evidence/: conveyance_lag_evidence.md
docs/references/: README.md
docs/strategies/: anthropology_source_strategy.md  strategic_paper_selection.md
hermes/: __init__.py
hermes/analysis/: bridge_detector.py  citation_network_analyzer.py  semantic_citation_analyzer.py
hermes/cli/: __init__.py  gather_papers.py
hermes/core/: adaptive_isne.py  base.py  config.py  directory_traverser.py  document_model.py  pipeline.py
hermes/embedders/: __init__.py  jina_v4.py  jina_v4_vllm.py  sentence_transformer.py
hermes/extractors/: __init__.py  claude_conveyance_analyzer.py  conveyance_analyzer.py  local_conveyance_analyzer.py  vllm_conveyance_analyzer.py
hermes/gathering/: __init__.py  arxiv_gatherer.py  base_gatherer.py  (+1 more)
scripts/: arxiv_paper_downloader.py  configure_arangodb_network.sh  create_dimensional_graph.py  create_named_graph.py  download_qwen.py  gather_chronological.sh  setup_arangodb.py  setup_dimensional_graph.py  survey_olympus_documents.py
tests/: test_connection.py  test_conveyance.py  test_embedder_debug.py  test_graph_creation.py  test_jina_simple.py  test_ocr_detection.py  test_ocr_pdf.py  test_single_ocr.py  test_vllm_analyzer.py  test_vllm_final.py
(+23 files in other folders)
